# ShineApp

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  LLM.md  README.md  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  requirements-docs.txt  tasks-prompts.md  tasks.json
backend/: .coveragerc  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json  wsgi.py
backend/catalog/: admin.py  models.py  sector_defaults.py  serializers.py  views.py
backend/config/: asgi.py  runtime_guard.py  serializers.py  settings.py  settings_migrations.py  settings_production.py  urls.py  views.py  wsgi.py
backend/core/: admin.py  audit.py  authentication.py  exceptions.py  logging.py  maintenance.py  middleware.py  migration_operations.py  models.py  permissions.py  request_context.py  request_ip.py  serializers.py  soft_delete.py  storage.py  throttling.py  trash.py  views.py
backend/customers/: admin.py  apps.py  birthdays.py  models.py  serializers.py  views.py
backend/dashboard/: views.py
backend/debts/: admin.py  apps.py  models.py  recurrence.py  serializers.py  views.py
backend/finance/: admin.py  apps.py  cash.py  models.py  serializers.py  views.py
backend/fixed_expenses/: admin.py  apps.py  materialization.py  models.py  serializers.py  views.py
backend/inventory/: admin.py  apps.py  models.py  serializers.py  stock.py  views.py
backend/notifications/: admin.py  apps.py  models.py  outbox.py  serializers.py  service.py  views.py
backend/quotes/: admin.py  apps.py  models.py  pdf.py  (+2 more)
(+717 files in other folders)
